[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "action_toolkit"
authors = [
    { name = "rhawk117" }
]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
repository = "https://github.com/rhawk117/python-github-actions-toolkit"

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.hatch.build.targets.wheel]
packages = [
    "actions_toolkit"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
python_files = [
    "test_*.py"
]
python_functions = [
    "test_*"
]
# addopts = [
#     "--cov=actions_toolkit",
#     "--cov-report=term-missing",
#     "--cov-report=html:coverage_html_report",
# ]

log_cli=true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filter_warnings = [
    "error",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning"
]



